--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Lizzy gold collection is more than just a brand, it is an emotional string of so
             <h4 class="text-warning">Patience Han</h4>
            </div>
             <div class="card-text">
-              <p class="text-muted">Wow! they are incredible fashion designer that bring your dream to reallity </p>
+              <p class="text-muted">Wow! they are incredible fashion designer that bring your dream to reallity.They are indeed fast and reliable </p>
               <span class="text-danger">Rate:</span>
             </div>
           </div>
@@ -234,7 +234,7 @@ Lizzy gold collection is more than just a brand, it is an emotional string of so
            
            </div>
             <div class="card-text">
-              <p class="text-muted">Wow! they are incredible fashion designer that bring your dream to reallity </p>
+              <p class="text-muted">Wow! they are incredible fashion designer that bring your dream to reallity. I really love their outfits </p>
               <span class="text-danger">Rate:</span>
             </div>
           </div>
@@ -293,7 +293,7 @@ Lizzy gold collection is more than just a brand, it is an emotional string of so
             <h4 class="text-warning">Mrs. Confort</h4>
            </div>
             <div class="card-text">
-              <p class="text-muted">Wow! they are incredible fashion designer that bring your dream to reallity </p>
+              <p class="text-muted">Wow! they are incredible fashion designer that bring your dream to reallity.their are indeed incredible </p>
               <span class="text-danger">Rate:</span>
             </div>
           </div>
@@ -352,7 +352,7 @@ Lizzy gold collection is more than just a brand, it is an emotional string of so
             <h4 class="text-warning">Esther Jacob</h4>
            </div>
             <div class="card-text">
-              <p class="text-muted">Wow! they are incredible fashion designer that bring your dream to reallity </p>
+              <p class="text-muted">Wow! they are incredible fashion designer that bring your dream to reallity. My first order was fast. </p>
               <span class="text-danger">Rate:</span>
             </div>
           </div>
