--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 Lizzy gold collection is more than just a brand, it is an emotional string of socially aware stories and expression cut into clothing. She believe fashion can and should save lives. It is a movement that covers universal silhouette with an African touch to a creative class of people. translating into a heady mixture of Nigerian inspired print fabrics,color, and contemporary anddrogynous clothing.
 </p>
 <div class="py-3">
-  <a href="/about.html" class="btn btn-outline-dark btn-lg text-light">Read More&ShortRightArrow;</a>
+  <a href="/about.html" class="btn btn-outline-dark btn-lg text-danger">Read More&ShortRightArrow;</a>
 </div>
 
 
