--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="/img/about_img/lizzyp.jpg" type="image/x-icon">
   <title>Lizzy Gold Collections</title>
 </head>
 <body>
