--- a/index.html
+++ b/index.html
@@ -5,24 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="Lizzy Gold Collections, Fashion Design, Fashion, Tailoring, Fashion Training, Fashion School, Fashion Designer, Fashion Industry">
   <meta name="description" content="Lizzy Gold Collections is a fashion design company that gives you the outfit you could ever imagine! We also train tailors who are ready to dive into the fashion industry">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="/img/about_img/lizzyp.jpg" type="image/x-icon">
   <title>Lizzy Gold Collections</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<!-- animation from animate -->
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+<!-- animation from aos -->
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+
 <body>
   
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-5 fixed-top   p-lg-3">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-5 fixed-top   p-lg-3 ">
   <div class="container">
-    <a href="#" class="navbar-brand fs-1 fw-bold">Lizzy Gold <span class="text-warning">Collections</span> </a>
+    <a href="#" class="navbar-brand fs-1 fw-bold animate__animated animate__backInDown">Lizzy Gold <span class="text-warning">Collections</span> </a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse  " id="navmenu">
-      <ul class="navbar-nav ms-auto fw-bold fs-4 ">
+    <div class="collapse navbar-collapse   " id="navmenu">
+      <ul class="navbar-nav ms-auto fw-bold fs-4 animate_animated animate__backInDown ">
         <li class="nav-item " >
-          <a href="#" class="nav-link">Home</a>
+          <a href="#" class="nav-link ">Home</a>
         </li>
         <li class="nav-item">
           <a href="#about" class="nav-link">About</a>
@@ -35,7 +47,7 @@
         </li>
         
       </ul>
-      <a href="#collections" class="btn btn-danger btn-sm">Check Out Our Collections</a>
+      <a href="#collections" class="btn btn-danger btn-sm ">Check Out Our Collections</a>
     </div>
   </div>
 
@@ -48,12 +60,12 @@
    <section class="p-5 bg-danger text-center text-md-start pb-lg-0 ">
     <div class="container">
       <div class="row justify-content-between align-itmes-center">
-        <div class="col-md pt-5">
+        <div class="col-md pt-5  " data-aos="fade-right">
           <h1 class="mb-3 text-light fw-bold display-5"><span class="text-warning">We Give You the Best</span>  Outfit You Deserve</h1>
           <p class="text-light fw-bold fs-5 py-3">Lizzy Gold Fashion Design Is a Company That gives You The Outfit You could Ever Imagine! We Also Train Tailors who are ready to dive into fashion Industry</p>
           <button class="btn btn-dark btn-lg shadow-lg" type="button" onclick="myCollections()">Shop The Collections Now &ShortRightArrow;</button>
         </div>
-        <div class="col-md pt-5">
+        <div class="col-md pt-5" data-aos="fade-left">
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -81,11 +93,11 @@
    <!-- about section -->
 
 
-    <section  id="about" class="p-5 bg-light text-center text-md-start pb-lg-0">
+    <section  id="about" class="p-5 bg-light text-center text-md-start pb-lg-0" >
       <div class="container">
        
         <div class="row align-itmes-center">
-          <div class="col-md">
+          <div class="col-md " data-aos="zoom-out-up">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -100,7 +112,7 @@
               </div>
             </div>
           </div>
-          <div class=" col-md py-1">
+          <div class=" col-md py-1" data-aos="zoom-out">
             <h3 class="text-dark fw-bold  pt-5">CEO Of Lizzy Gold Collections</h3>
             <h2 class="text-dark py-2 display-4">Patricia Timothy</h2>
 <p class="text-dark">Lizzy Gold collection was launched in 2023/2025, after haven worked for several designs, to turn her unique vision and passion from fashion into a reallity.
@@ -122,7 +134,7 @@ Lizzy gold collection is more than just a brand, it is an emotional string of so
 
      <div class="container">
       <div class=" mb-5">
-        <h1 class="display-1 text-center  fw-bold text-danger "><span class="text-warning">Our </span> Testimonials</h1>
+        <h1 class="display-1 text-center  fw-bold text-danger  "><span class="text-warning ">Our </span> Testimonials</h1>
         <p class="text-dark lead fw-bold text-center lead">What  Our Customers are Saying About Us</p>
       </div>
       <div class="row justify-content-center align-itmes-center g-3">
@@ -375,7 +387,8 @@ Lizzy gold collection is more than just a brand, it is an emotional string of so
     <!--  collections section -->
 
 
-    <section id="collections" class="bg-light p-5  text-center text-md-start ">
+    <section id="collections" class="bg-light p-5  text-center text-md-start " data-aos="fade-up"
+    data-aos-duration="3000">
 
       <div class="container">
        <div class=" mb-5">
@@ -1037,7 +1050,8 @@ Lizzy gold collection is more than just a brand, it is an emotional string of so
         <!-- contact info section -->
 
       </section>
-      <section id="contact" class="p-5 bg-light text-center text-md-start">
+      <section id="contact" class="p-5 bg-light text-center text-md-start" data-aos="fade-up"
+      data-aos-duration="3000">
         <div class="container">
           <h1 class="display-1 text-primary fw-bold  w-50 text-center p-3 mb-3">Contact <span class="text-warning">Info</span> </h1>
           <div class="row">
@@ -1070,6 +1084,11 @@ Lizzy gold collection is more than just a brand, it is an emotional string of so
 
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- animation from aos -->
   <script src="/index.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
