--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
    <section class="p-5 bg-danger text-center text-md-start pb-lg-0 ">
     <div class="container">
       <div class="row justify-content-between align-itmes-center">
-        <div class="col-md pt-5  " data-aos="fade-right">
+        <div class="col-md pt-5 animate__animated animate__backInUp " >
           <h1 class="mb-3 text-light fw-bold display-5"><span class="text-warning">We Give You the Best</span>  Outfit You Deserve</h1>
           <p class="text-light fw-bold fs-5 py-3">Lizzy Gold Fashion Design Is a Company That gives You The Outfit You could Ever Imagine! We Also Train Tailors who are ready to dive into fashion Industry</p>
           <button class="btn btn-dark btn-lg shadow-lg" type="button" onclick="myCollections()">Shop The Collections Now &ShortRightArrow;</button>
         </div>
-        <div class="col-md pt-5" data-aos="fade-left">
+        <div class="col-md pt-5">
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
