--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
 <!-- animation from aos -->
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+<!-- open graph protocol -->
+<meta property="og:title" content="lizzy gold collections" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://lizzygoldcollections.onrender.com" />
+<meta property="og:image" content="https://" />
 </head>
 
 <body>
