--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-5 fixed-top   p-lg-3 sss">
   <div class="container">
     <a href="#" class="navbar-brand fs-1 fw-bold animate__animated animate__backInDown">Lizzy Gold <span class="text-warning">Collections</span> </a>
-    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu" type="button">
+    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu" type="button" aria-labelledby="job">
       <span class="navbar-toggler-icon" aria-labelledby="job"></span>
     </button>
     <div class="collapse navbar-collapse   " id="navmenu">
