text size and color changed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   <div class="container">
     <a href="#" class="navbar-brand fs-1 fw-bold animate__animated animate__backInDown">Lizzy Gold <span class="text-warning">Collections</span> </a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu" type="button" aria-labelledby="job">
-      <span class="navbar-toggler-icon" aria-labelledby="job"></span>
+      <span class="navbar-toggler-icon" aria-label="navbar-toggler"></span>
     </button>
     <div class="collapse navbar-collapse   " id="navmenu">
       <ul class="navbar-nav ms-auto fw-bold fs-4 animate_animated animate__backInDown ">
@@ -69,7 +69,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <div class="container">
       <div class="row justify-content-between align-itmes-center">
         <div class="col-md pt-5 animate__animated animate__backInUp " >
-          <h1 class="mb-3 text-light fw-bold display-5"><span class="text-warning">We Give You the Best</span>  Outfit You Deserve</h1>
+          <h1 class="mb-3 text-light fw-bold display-5"><span class="text-light">We Give You the Best</span>  Outfit You Deserve</h1>
           <p class="text-light fw-bold fs-5 py-3">Lizzy Gold Fashion Design Is a Company That gives You The Outfit You could Ever Imagine! We Also Train Tailors who are ready to dive into fashion Industry</p>
           <button class="btn btn-dark btn-lg shadow-lg" type="button" onclick="myCollections()">Shop The Collections Now &ShortRightArrow;</button>
         </div>
