--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 Lizzy gold collection is more than just a brand, it is an emotional string of socially aware stories and expression cut into clothing. She believe fashion can and should save lives. It is a movement that covers universal silhouette with an African touch to a creative class of people. translating into a heady mixture of Nigerian inspired print fabrics,color, and contemporary anddrogynous clothing.
 </p>
 <div class="py-3">
-  <a href="/about.html" class="btn btn-outline-dark btn-lg text-danger">Read More&ShortRightArrow;</a>
+  <a href="/about.html" class="btn btn-outline-danger btn-lg text-dark">Read More&ShortRightArrow;</a>
 </div>
 
 
@@ -144,7 +144,7 @@ Lizzy gold collection is more than just a brand, it is an emotional string of so
 
      <div class="container">
       <div class=" mb-5">
-        <h1 class="display-1 text-center  fw-bold text-danger  "><span class="text-warning ">Our </span> Testimonials</h1>
+        <h1 class="display-1 text-center  fw-bold text-danger  "><span class="text-dark ">Our </span> Testimonials</h1>
         <p class="text-dark lead fw-bold text-center lead">What  Our Customers are Saying About Us</p>
       </div>
       <div class="row justify-content-center align-itmes-center g-3">
