added google search

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
   <meta name="keywords" content="Lizzy Gold Collections, Fashion Design, Fashion, Tailoring, Fashion Training, Fashion School, Fashion Designer, Fashion Industry">
   <meta name="description" content="Lizzy Gold Collections is a fashion design company that gives you the outfit you could ever imagine! We also train tailors who are ready to dive into the fashion industry">
   <!-- open graph protocol -->
@@ -10,6 +11,8 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://lizzygoldcollections.onrender.com" />
 <meta property="og:image" content="https://" />
+<!-- google search -->
+<meta name="google-site-verification" content="kx0RGlJJii6irdtXvSTJPERoJOI02WCMCDHpHRcJlks" />
 
 
 <!-- boostrap css -->
